--- a/res/macOSNotif.css
+++ b/res/macOSNotif.css
@@ -1,3 +1,5 @@
+@import "macOSNotif.fonts.css";
+
 .macOSNotif_Outer {
     width: 430px;
     height: 92px;
@@ -31,7 +33,8 @@
     font-weight: 300;
     color: #444;
     text-align: left;
-    font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+    font-family: "SF Display", -apple-system, system-ui, BlinkMacSystemFont, "HelveticaNeue-Light",
+    "Helvetica Neue Light", "Helvetica Neue", Helvetica, "Segoe UI", Roboto, Ubuntu, "Lucida Grande", sans-serif;
 }
 
 .macOSNotif_Text {
