fix the font styling issue

--- a/plugin/res/macOSNotif.css
+++ b/plugin/res/macOSNotif.css
@@ -47,7 +47,9 @@
     border-radius: 10px;
     border: none;
     transition: all .8s ease-in-out;
+}
 
+.macOSNotif_Container * {
     font-weight: 300;
     color: #444;
     text-align: left;
