content-box not border-box

--- a/plugin/res/macOSNotif.css
+++ b/plugin/res/macOSNotif.css
@@ -17,6 +17,10 @@
  */
 @import "macOSNotif.fonts.min.css";
 
+.macOSNotif_Outer, .macOSNotif_Outer * {
+    box-sizing: content-box;
+}
+
 .macOSNotif_Outer {
     width: 430px;
     height: 72px;
