--- a/src/css/macOSNotif.css
+++ b/src/css/macOSNotif.css
@@ -53,7 +53,7 @@
     transition: all .8s ease-in-out;
 }
 
-.macOSNotif_Dark .macOSNotif_Container {
+[data-macOSNotifTheme="dark"] .macOSNotif_Container {
     box-shadow: rgba(255, 255, 255, .2) 0 0 2px inset, rgba(0, 0, 0, .2) 0 0 10px;
     background: #333;
 }
@@ -67,7 +67,7 @@
     transition: all .8s ease-in-out;
 }
 
-.macOSNotif_Dark .macOSNotif_Container * {
+[data-macOSNotifTheme="dark"] .macOSNotif_Container * {
     color: #fefefe;
 }
 
@@ -146,7 +146,7 @@
     padding: 0;
 }
 
-.macOSNotif_Dark .macOSNotif_Buttons {
+[data-macOSNotifTheme="dark"] .macOSNotif_Buttons {
     border-color: #111;
 }
 
@@ -172,7 +172,7 @@
     transition: all .8s ease-in-out, background .1s, color .1s;
 }
 
-.macOSNotif_Dark .macOSNotif_Button {
+[data-macOSNotifTheme="dark"] .macOSNotif_Button {
     color: #fefefe;
 }
 
@@ -192,8 +192,8 @@
     box-shadow: rgba(0, 0, 0, .2) 0 0 2px inset;
 }
 
-.macOSNotif_Dark .macOSNotif_Button:active,
-.macOSNotif_Dark .macOSNotif_Button:focus {
+[data-macOSNotifTheme="dark"] .macOSNotif_Button:active,
+[data-macOSNotifTheme="dark"] .macOSNotif_Button:focus {
     background: hsl(211, 100%, 40%);
 }
 
@@ -207,6 +207,6 @@
     border-top: 1px #ddd solid;
 }
 
-.macOSNotif_Dark .macOSNotif_Button + .macOSNotif_Button {
+[data-macOSNotifTheme="dark"] .macOSNotif_Button + .macOSNotif_Button {
     border-color: #111;
 }
