--- a/src/css/macOSNotif.css
+++ b/src/css/macOSNotif.css
@@ -15,8 +15,10 @@
  *   along with this program. If not, please see
  *   <https://github.com/MattIPv4/macOSNotifJS/blob/master/LICENSE> or <http://www.gnu.org/licenses/>.
  */
+/* Bring in fonts */
 @import "macOSNotif.fonts.css";
 
+/* Base notification (light) */
 .macOSNotif_Outer, .macOSNotif_Outer * {
     box-sizing: content-box;
 }
@@ -53,11 +55,6 @@
     transition: all .8s ease-in-out;
 }
 
-[data-macOSNotifTheme="dark"] .macOSNotif_Container {
-    box-shadow: rgba(255, 255, 255, .2) 0 0 2px inset, rgba(0, 0, 0, .2) 0 0 10px;
-    background: #333;
-}
-
 .macOSNotif_Container * {
     font-weight: 300;
     color: #444;
@@ -65,10 +62,6 @@
     font-family: "SF Display", -apple-system, system-ui, BlinkMacSystemFont, "HelveticaNeue-Light",
     "Helvetica Neue Light", "Helvetica Neue", Helvetica, "Segoe UI", Roboto, Ubuntu, "Lucida Grande", sans-serif;
     transition: all .8s ease-in-out;
-}
-
-[data-macOSNotifTheme="dark"] .macOSNotif_Container * {
-    color: #fefefe;
 }
 
 .macOSNotif_Clickable {
@@ -146,10 +139,6 @@
     padding: 0;
 }
 
-[data-macOSNotifTheme="dark"] .macOSNotif_Buttons {
-    border-color: #111;
-}
-
 .macOSNotif_Button {
     display: block;
     cursor: pointer;
@@ -172,10 +161,6 @@
     transition: all .8s ease-in-out, background .1s, color .1s;
 }
 
-[data-macOSNotifTheme="dark"] .macOSNotif_Button {
-    color: #fefefe;
-}
-
 .macOSNotif_Button:first-of-type {
     border-top-right-radius: 10px;
 }
@@ -192,11 +177,6 @@
     box-shadow: rgba(0, 0, 0, .2) 0 0 2px inset;
 }
 
-[data-macOSNotifTheme="dark"] .macOSNotif_Button:active,
-[data-macOSNotifTheme="dark"] .macOSNotif_Button:focus {
-    background: hsl(211, 100%, 40%);
-}
-
 .macOSNotif_ButtonFull {
     border: none;
     line-height: calc(72px - 5px - 5px);
@@ -207,6 +187,83 @@
     border-top: 1px #ddd solid;
 }
 
+/* Dark theme */
+[data-macOSNotifTheme="dark"] .macOSNotif_Container {
+    box-shadow: rgba(255, 255, 255, .2) 0 0 2px inset, rgba(0, 0, 0, .2) 0 0 10px;
+    background: #333;
+}
+
+[data-macOSNotifTheme="dark"] .macOSNotif_Container *,
+[data-macOSNotifTheme="dark"] .macOSNotif_Button {
+    color: #fefefe;
+}
+
+[data-macOSNotifTheme="dark"] .macOSNotif_Button:active,
+[data-macOSNotifTheme="dark"] .macOSNotif_Button:focus {
+    background: hsl(211, 100%, 40%);
+}
+
+[data-macOSNotifTheme="dark"] .macOSNotif_Buttons,
 [data-macOSNotifTheme="dark"] .macOSNotif_Button + .macOSNotif_Button {
     border-color: #111;
+}
+
+/* Info theme */
+[data-macOSNotifTheme="info"] .macOSNotif_Container {
+    background: #4A89DC;
+}
+
+[data-macOSNotifTheme="info"] .macOSNotif_Container *,
+[data-macOSNotifTheme="info"] .macOSNotif_Button {
+    color: #fefefe;
+}
+
+[data-macOSNotifTheme="info"] .macOSNotif_Buttons,
+[data-macOSNotifTheme="info"] .macOSNotif_Button + .macOSNotif_Button {
+    border-color: #5D9CEC;
+}
+
+/* Warning theme */
+[data-macOSNotifTheme="warning"] .macOSNotif_Container {
+    background: #eba03f;
+}
+
+[data-macOSNotifTheme="warning"] .macOSNotif_Container *,
+[data-macOSNotifTheme="warning"] .macOSNotif_Button {
+    color: #fefefe;
+}
+
+[data-macOSNotifTheme="warning"] .macOSNotif_Buttons,
+[data-macOSNotifTheme="warning"] .macOSNotif_Button + .macOSNotif_Button {
+    border-color: #f5b651;
+}
+
+/* Danger theme */
+[data-macOSNotifTheme="danger"] .macOSNotif_Container {
+    background: #DA4453;
+}
+
+[data-macOSNotifTheme="danger"] .macOSNotif_Container *,
+[data-macOSNotifTheme="danger"] .macOSNotif_Button {
+    color: #fefefe;
+}
+
+[data-macOSNotifTheme="danger"] .macOSNotif_Buttons,
+[data-macOSNotifTheme="danger"] .macOSNotif_Button + .macOSNotif_Button {
+    border-color: #ED5565;
+}
+
+/* Success theme */
+[data-macOSNotifTheme="success"] .macOSNotif_Container {
+    background: #38ba8f;
+}
+
+[data-macOSNotifTheme="success"] .macOSNotif_Container *,
+[data-macOSNotifTheme="success"] .macOSNotif_Button {
+    color: #fefefe;
+}
+
+[data-macOSNotifTheme="success"] .macOSNotif_Buttons,
+[data-macOSNotifTheme="success"] .macOSNotif_Button + .macOSNotif_Button {
+    border-color: #48cfa0;
 }
